--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="projectsbox">
                 <div class="projectcard" onclick="window.open('https://aninaw-tech.herokuapp.com/','_blank')">
                     <div class="projimgbox">
-                        <img class="projimg" src="/images/project1.png" alt="">
+                        <img class="projimg" src="images/project1.png" alt="">
                     </div>
                     <h2 class="projitlabel">Aninaw Tech</h2>
                     <p class="projitphrase">Aninaw-Tech is a data visualization and forecasting web application for the
@@ -145,7 +145,7 @@
                 </div>
                 <div class="projectcard" onclick="window.open('https://github.com/Library-of-Vivec/Reddot','_blank')">
                     <div class="projimgbox">
-                        <img class="projimg" src="/images/project2.png" alt="">
+                        <img class="projimg" src="images/project2.png" alt="">
                     </div>
                     <h2 class="projitlabel">Reddot</h2>
                     <p class="projitphrase">Reddot will serve as an online forum for FEU Alabang where
