--- a/index.html
+++ b/index.html
@@ -151,6 +151,22 @@
                     <p class="projitphrase">Reddot will serve as an online forum for FEU Alabang where
                         they can share their work and critique each other’s work as well</p>
                 </div>
+                <div class="projectcard"
+                    onclick="window.open('https://http://feuarubrics.000webhostapp.com/','_blank')">
+                    <div class="projimgbox">
+                        <img class="projimg" src="images/project3.png" alt="">
+                    </div>
+                    <h2 class="projitlabel">FeuARubrics</h2>
+                    <p class="projitphrase">Rubrics grading system for capstone projects in FEU Alabang</p>
+                </div>
+                <div class="projectcard"
+                    onclick="window.open('https://drive.google.com/drive/u/1/folders/1LGf2WOtsZN1N3miMqD1taOUhKcX1OvRa?fbclid=IwAR3rI8Z-6gm4Uq6U_YTkJAUvJL2cjP-dvyfG29EmqSjIbTfUVg39FjxdP2w','_blank')">
+                    <div class="projimgbox">
+                        <img class="projimg" src="images/project4.png" alt="">
+                    </div>
+                    <h2 class="projitlabel">Guiding Lands</h2>
+                    <p class="projitphrase">An android survival guide application.</p>
+                </div>
             </div>
         </section>
         <section class="contacts" id="contacts">
