--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                     </div>
                     <h2 class="projitlabel">Aninaw Tech</h2>
                     <p class="projitphrase">Aninaw-Tech is a data visualization and forecasting web application for the
-                        fund appropriations of all the local governments in the Philippines.</p>
+                        fund appropriations of all the local governments in the Philippines. <span
+                            class="highlight-txt">Lead Developer</span></p>
                 </div>
                 <div class="projectcard" onclick="window.open('https://github.com/Library-of-Vivec/Reddot','_blank')">
                     <div class="projimgbox">
@@ -149,7 +150,8 @@
                     </div>
                     <h2 class="projitlabel">Reddot</h2>
                     <p class="projitphrase">Reddot will serve as an online forum for FEU Alabang where
-                        they can share their work and critique each other’s work as well</p>
+                        they can share their work and critique each other’s work as well. <span
+                            class="highlight-txt">Back-end Developer</span></p>
                 </div>
                 <div class="projectcard"
                     onclick="window.open('https://http://feuarubrics.000webhostapp.com/','_blank')">
@@ -157,7 +159,25 @@
                         <img class="projimg" src="images/project3.png" alt="">
                     </div>
                     <h2 class="projitlabel">FeuARubrics</h2>
-                    <p class="projitphrase">Rubrics grading system for capstone projects in FEU Alabang</p>
+                    <p class="projitphrase">Rubrics grading system for capstone projects in FEU Alabang. <span
+                            class="highlight-txt">Lead Front-End Developer Intern</span></p>
+                </div>
+                <div class="projectcard" onclick="window.open('https://mandanasruling.ph/','_blank')">
+                    <div class="projimgbox">
+                        <img class="projimg" src="images/project5.png" alt="">
+                    </div>
+                    <h2 class="projitlabel">Mandanas Ruling</h2>
+                    <p class="projitphrase">Implementation of the Mandanas-Garcia Ruling, which intends to make access
+                        to information more efficient and convenient to local government officials and personnel. <span
+                            class="highlight-txt">Front-End Developer Intern</span></p>
+                </div>
+                <div class="projectcard" onclick="window.open('http://bagotayo.net/','_blank')">
+                    <div class="projimgbox">
+                        <img class="projimg" src="images/project6.png" alt="">
+                    </div>
+                    <h2 class="projitlabel">Bago Tayo</h2>
+                    <p class="projitphrase">A platform for exchanges of ideas to further develop and improve the lives of the children and youth sector. <span
+                            class="highlight-txt">Lead Developer Intern</span></p>
                 </div>
                 <div class="projectcard"
                     onclick="window.open('https://drive.google.com/drive/u/1/folders/1LGf2WOtsZN1N3miMqD1taOUhKcX1OvRa?fbclid=IwAR3rI8Z-6gm4Uq6U_YTkJAUvJL2cjP-dvyfG29EmqSjIbTfUVg39FjxdP2w','_blank')">
@@ -165,7 +185,8 @@
                         <img class="projimg" src="images/project4.png" alt="">
                     </div>
                     <h2 class="projitlabel">Guiding Lands</h2>
-                    <p class="projitphrase">An android survival guide application.</p>
+                    <p class="projitphrase">An android survival guide application. <span class="highlight-txt">Lead
+                            Developer</span></p>
                 </div>
             </div>
         </section>
